css/card.css
/* ... */
.header-song{
    display: none;
}
@keyframes up-and-down {
    0% {
      transform: translateY(0);
    }
    50% {
      transform: translateY(-50px);
    }
    100% {
      transform: translateY(0);
    }
}
@media (max-width: 450px) {
    html{
        font-size: 50%;
        overflow-x: hidden;
    }
    body{
        color: #fff;
        text-align: center;
    }
    .logo{
        width: 25%;
    }
    .hero .mockup{
        display: none;
    }
    .mockup-mobile{
        display: block;
        max-width: 100%;
    }
    .hero-img{
        position: relative;
        bottom: 0;
    }
    .card-list{
        display: none;
    }
    .createcard > h4{
        width: fit-content;
    }
    .card-header h2{
        font-size: 2.4rem;
        background: linear-gradient(180deg, #00c795, #1ED760);
        text-shadow: none;
        -webkit-text-fill-color: transparent;
        -webkit-background-clip: text;
        background-clip: text;
        width: fit-content;
        color: #1ED760;
    }
    .card{
        display: flex;
        flex-direction: column;
        gap: 10em;
    }
    .card-header{
        position: relative;
        top: 2em;
        left: 9em;
    }
    #artist-follow-0, #artist-follow-1, #artist-follow-2, #artist-follow-3, #artist-follow-4, #artist-follow-5, #artist-follow-6{
        position: relative;
        top: 3em;
        left: 1.3em;
        font-size: 1.5rem;
    }
    .bx-group{
        position: relative;
        top: 6.5rem;
        left: 0em;
        font-size: 2rem;
    }
    .tags{
        position: relative;
        top: -3em;
        left: 8em;
        max-width: 30em;
    }
    .tags a{
        font-size: 1.3rem;
    }
    .made{
        width: 5rem;
        height: 40rem;
        margin-left: auto;
        margin-right: auto;
        left: 18em;
        display: none;
    }
    .made .follower{
        position: relative;
        top: -3.5em;
        left: -.7em;
    }
    .name{position: absolute;}
    .card-list{
        display: none;
    }
    .made .bx-group{
        position: relative;
        top: -.1em;
        left: 2em;
    }
     .album-cover{
        width: 5rem;
        height: 5rem;
    }
    .song-list{
        font-size: 6rem;
        position: relative;
        top: 0em;
    }
    .song-sec-searched{
        position: relative;
        left: 0;
        top: 10em;
    }
    .first-song{
        position: relative;
        font-size: 2rem;
        top: 1.4em;
    }
    .made .songs{
        position: relative;
        top: -19em;
        left: 0em;
    }
    .made .cta{
        position: relative;
        top: -8em;
        font-size: 1.5rem;
    }
    .made .first-song{
        position: relative;
        top: 0.7em;
        font-size: 1.5rem;
    }
    .made .second-song{
        position: relative;
        font-size: 1.5rem;
        top: .5em;
    }
    .made .last-song{
        position: relative;
        font-size: 1.5rem;
        top: -11.7em;
    }
    .song-boxi{
        position: relative;
        font-size: 1.5em;
        top: 1em;
        left: -2em;
        gap: 1.7em;
    }
    .song-boxi {
        position: relative;
        top: 5em;
    }
    .song-boxi .second-time{
        position: relative;
        top: 1em;
    }
    .song-boxi .third-time{
        position: relative;
        top: 1.5em;
    }
    .song-duration{
        position: relative;
        font-size: 1.5em;
        gap: 0em;
    }
    .made .first-duration{
        position: relative;
        font-size: 1em;
        top: -.5em;
        left: 0em;
    }
    .made .second-duration{
        position: relative;
        font-size: 1em;
        top: -.3em;
        left: 0em;
    }
    .made .third-duration{
        position: relative;
        font-size: 1em;
        top: -.4em;
        left: 0em;
    }
    .createcard h4{
        margin-left: auto;
        margin-right: auto;
        font-size: 3.5rem;
        color:#1ED760;
    }
    @keyframes up-and-down {
        0% {
          transform: translateY(0);
        }
        50% {
          transform: translateY(25px);
        }
        100% {
          transform: translateY(0);
        }
    }
    input[type="text"]{
        font-size: 2rem;
    }
    .bxl-deezer{
        font-size: 4rem;
        position: relative;
        top: .8em;
        left: 1.6em;
    }
    .spotylogo{
        display: none;
    }
    .header-song{
        position: absolute;
        top: 16.5em;
        left: -1.2em;
    }
    .header-song h4{
        font-size: 2rem;
    } 
}

